Add WebMIDI library to web interface

--- a/web/index.html
+++ b/web/index.html
@@ -114,6 +114,7 @@
     <span id="v"></span>
 </div>
 
+<script src="/static/js/webmidi.min.js?v=1"></script>
 <script src="/static/js/gui/gui.js?v=1"></script>
 <script src="/static/js/utils.js?v1"></script>
 <script src="/static/js/gui/message.js?v=1"></script>
