Add reset button to front end

--- a/web/index.html
+++ b/web/index.html
@@ -54,7 +54,7 @@
     </div>
     <div id="btn-load" class="btn big unselectable" value="load"></div>
     <div id="btn-save" class="btn big unselectable" value="save"></div>
-    <div id="btn-join" class="btn big unselectable" value="join"></div>
+    <div id="btn-reset" class="btn big unselectable" value="reset"></div>
     <div id="slider-playeridx" class="slidecontainer">
         player choice
         <input type="range" min="1" max="4" value="1" class="slider" id="playeridx" onkeydown="event.preventDefault()">
