--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
             There is still audio because current audio flow is not from media but it is manually encoded (technical webRTC challenge). Later, when we can integrate audio to media, we can face the issue with mute again .
             https://developers.google.com/web/updates/2017/09/autoplay-policy-changes
         -->
-        <video id="stream" class="game-screen" hidden muted playsinline preload="none"></video>
+        <video id="stream" class="game-screen" hidden muted controls playsinline preload="none"></video>
 
         <div id="menu-screen">
             <div id="menu-container">
