Customize UI for Desert Bus game

--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,13 @@
         </div>
     </div>
 
-    <div id="guide-txt"><b>Arrows</b>(move),<b>ZXCVAS</b>(game ABXYLR),<b>1/2</b>(1st/2nd player),<b>Shift/Enter/K/L</b>(select/start/save/load),<b>F</b>(fullscreen),<b>share</b>(copy
-        sharelink to clipboard)
+    <div id="guide-txt">
+        <b>Arrows</b> (move),
+        <b>C</b> (accelerate),
+        <b>X</b> (brake),
+        <b>Z</b> (door),
+        <b>Enter</b> (start/horn),
+        <b>F</b> (fullscreen)
     </div>
     <div id="btn-load" class="btn big unselectable" value="load"></div>
     <div id="btn-save" class="btn big unselectable" value="save"></div>
@@ -59,14 +64,12 @@
     </div>
 
     <div id="btn-quit" class="btn big unselectable" value="quit"></div>
-    <div id="btn-select" class="btn big unselectable" value="select"></div>
     <div id="btn-start" class="btn big unselectable" value="start"></div>
 
 
     <div id="color-button-holder">
         <div id="btn-a" class="btn unselectable" value="a"></div>
         <div id="btn-b" class="btn unselectable" value="b"></div>
-        <div id="btn-x" class="btn unselectable" value="x"></div>
         <div id="btn-y" class="btn unselectable" value="y"></div>
     </div>
 
