Flip keyboard controls and add PS4 mapping

--- a/web/index.html
+++ b/web/index.html
@@ -50,10 +50,10 @@
     <div id="servers"></div>
 
     <div id="guide-txt">
-        <b>Arrows</b> (move),
-        <b>C</b> (accelerate),
-        <b>X</b> (brake),
-        <b>Z</b> (door),
+        <b>Arrows</b> (steer/change letter),
+        <b>Z</b> (accelerate/erase letter),
+        <b>X</b> (brake/enter letter),
+        <b>C</b> (door),
         <b>Enter</b> (start/horn),
         <b>F</b> (fullscreen)
     </div>
